--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="en">
 
 <head>
+
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QYTHMS3T4G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QYTHMS3T4G');
+</script>
+
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +26,7 @@
     <link type="image/x-icon" href="IMG/icon.svg" rel="shortcut icon">
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/style.css">
-    <script src="JS/main.js" defer></script>
+
 
 </head>
 
@@ -171,6 +183,11 @@
       
 
     </footer>
+
+    <script src="JS/main.js" defer></script>
+    
+ 
+
 </body>
 
 </html>
